--- a/README.org
+++ b/README.org
@@ -66,6 +66,10 @@ its content.
 
 ** Octubre 2024
 
+*** 26-Oct-24
++ [[http://platon.etsii.urjc.es/~jarias/ICLPWorkshops2024/short7GDE24.pdf][Neuro-symbolic agent with ASP for robust exception learning in text-based games]]. ~ Kinjal Basu. #ILP #LogicProgramming #AI #MachineLearning
++ [[https://cacm.acm.org/opinion/an-ai-learning-hierarchy/][An AI learning hierarchy]]. ~ Peter J. Denning, Ted G. Lewis. #AI
+
 *** 25-Oct-24
 + [[https://arxiv.org/abs/2410.17847][A formal characterization of discrete condensed objects]]. ~ Dagur Asgeirsson. #ITP #LeanProver #Math
 + [[https://arxiv.org/abs/2410.15386][Formalization of differential privacy in Isabelle/HOL]]. ~ Tetsuya Sato, Yasuhiko Minamide. #ITP #IsabelleHOL
