--- a/README.org
+++ b/README.org
@@ -67,6 +67,9 @@ its content.
 
 ** Noviembre 2024
 
+*** 04-Nov-24
++ [[https://youtu.be/iwGc-5rB2qk][Lean: First steps (14 - Disequality again)​ (Video)]]. ~ Tariq Rashid (@rzeta0@mastodon.social). #ITP #Lean4 #Math
+
 *** 03-Nov-24
 + [[https://byorgey.github.io/blog/posts/2024/11/02/UnionFind.html][Competitive programming in Haskell: Union-find]]. ~ Brent Yorgey (@byorgey@mathstodon.xyz). #Haskell #FunctionalProgramming
 
