--- a/README.org
+++ b/README.org
@@ -67,6 +67,9 @@ its content.
 
 ** Noviembre 2024
 
+*** 05-Nov-24
++ [[https://blog.jle.im/entry/functors-to-monads-a-story-of-shapes.html][Functors to Monads: A story of shapes]]. ~ Justin Lê (@mstk). #Haskell #FunctionalProgramming
+
 *** 04-Nov-24
 + [[https://youtu.be/iwGc-5rB2qk][Lean: First steps (14 - Disequality again)​ (Video)]]. ~ Tariq Rashid (@rzeta0@mastodon.social). #ITP #Lean4 #Math
 
